--- a/.devcontainer/examples/example4.html
+++ b/.devcontainer/examples/example4.html
@@ -26,7 +26,7 @@
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id est laborum
           </p>
-          <img src="../examples/images/balloons.jpeg" />
+          <img src="../exercises/cat.jpeg" alt="Cat with glasses" />
         </div>
       </div>
       <div class="related"><h1>related content</h1></div>
